impl and unit tests for replaceAsset
